<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello" android:textSize="20dip"/>

   

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/thing01" android:layout_margin="2dp"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/thing02" android:layout_margin="2dp"/>
        

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button3"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/thing03" />

        <Button
            android:id="@+id/button4"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/thing04" android:layout_margin="2dp"/>

    </LinearLayout>

     <LinearLayout
         android:id="@+id/linearLayout3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >

         <Button
             android:id="@+id/button5"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_margin="2dp"
             android:text="@string/thing05" />
<!--         <Button-->
<!--            android:id="@+id/button6"-->
<!--            android:layout_width="100dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/userall" android:layout_margin="2dp"/>-->

    </LinearLayout>

</LinearLayout>